--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
+
+
 #ri-container{
 font-family: 'Open Sans', sans-serif;
 }
@@ -8,6 +10,11 @@ font-family: 'Open Sans', sans-serif;
 max-width: 100%;
 height: auto;
 }
+
+
+/**********************Versão Desktop********************************/
+
+@media only screen and (min-width: 900px) {
 
 .ctns{
   display: none;
@@ -408,3 +415,39 @@ opacity: 0;
 img[usemap], map area{
 outline: none;
 }
+
+#size-advise{
+  display: none;
+}
+
+
+}
+
+/**********************Versão Mobile********************************/
+
+@media only screen and (max-width: 900px) {
+
+#overlay-black, #line, #tooltips,#bg-img, #clique-dica, .points, .hvr-grow, .labels, .numeros, .text-overlay{
+  display: none;
+}
+
+
+#size-advise{
+ padding: 10px; 
+ background-color: #615184;
+ width: 100%;
+ height: 5%;
+ font-size: 12px;
+ color: #fff;
+ top: 0px;
+ left: 0px;
+ margin: 0px;
+ vertical-align: center;
+ text-align: center;
+}
+
+
+
+}  
+
+
